--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+
 # Logs
 logs
 *.log
@@ -59,3 +64,4 @@ typings/
 
 # next.js build output
 .next
+
