--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./server/index.js",
-    "dev": "nodemon ./server/index.js",
-    "lint": "eslint --ext . .js"
+    "backend": "nodemon ./server/index.js",
+    "frontend": "npm run start --prefix client",
+    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "lint": "eslint client/src --ext .js && eslint server --ext .js"
   },
   "engines": {
     "node": "8.11.2",
@@ -28,13 +30,14 @@
     "express": "4.16.4"
   },
   "devDependencies": {
-    "babel-eslint": "8.2.3",
-    "eslint": "4.9.0",
+    "concurrently": "4.1.0",
+    "nodemon": "1.18.7",
+    "babel-eslint": "9.0.0",
+    "eslint": "5.6.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-loader": "2.0.0",
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.2",
-    "eslint-plugin-react": "7.9.1",
-    "nodemon": "1.18.7"
+    "eslint-plugin-react": "7.9.1"
   }
 }
