--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.0",
+    "axios": "0.18.0",
     "http-proxy-middleware": "0.19.1",
     "materialize-css": "1.0.0",
     "prop-types": "15.6.2",
@@ -11,7 +11,8 @@
     "react-dom": "16.6.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.1.1",
-    "uuid": "^3.3.2"
+    "universal-cookie": "3.0.7",
+    "uuid": "3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
