--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node ./server/index.js",
     "backend": "nodemon ./server/index.js",
     "frontend": "npm run start --prefix client",
+    "mongo": "~/mongo/bin/mongod --dbpath ~/mongo-data",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "lint": "eslint client/src --ext .js && eslint server --ext .js"
   },
@@ -27,7 +28,8 @@
   "dependencies": {
     "body-parser": "1.18.3",
     "dialogflow": "0.7.0",
-    "express": "4.16.4"
+    "express": "4.16.4",
+    "mongoose": "5.3.15"
   },
   "devDependencies": {
     "concurrently": "4.1.0",
