--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "frontend": "npm run start --prefix client",
     "mongo": "~/mongo/bin/mongod --dbpath ~/mongo-data",
     "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
-    "lint": "eslint client/src --ext .js && eslint server --ext .js"
+    "lint": "eslint client/src --ext .js && eslint server --ext .js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "engines": {
     "node": "8.11.2",
