Made the canva dynamic with debounce

--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "http-proxy-middleware": "0.19.1",
+    "lodash.debounce": "4.0.8",
     "materialize-css": "1.0.0",
     "prop-types": "15.6.2",
     "react": "16.6.3",
