Added a nice layout for the feedback page

--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "http-proxy-middleware": "0.19.1",
     "lodash.debounce": "4.0.8",
     "materialize-css": "1.0.0",
+    "moment": "2.23.0",
     "prop-types": "15.6.2",
     "react": "16.6.3",
     "react-dom": "16.6.3",
