--- a/client/package.json
+++ b/client/package.json
@@ -50,7 +50,10 @@
     ],
     "collectCoverageFrom": [
       "src/**/*.{js,jsx}",
-      "!src/index.js"
+      "!src/index.js",
+      "!src/serviceWorker.js",
+      "!src/setupProxy.js",
+      "!src/utils/structjson.js"
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/(dist|coverage|node_modules)/",
@@ -59,7 +62,7 @@
     "setupTestFrameworkScriptFile": "<rootDir>/internals/testing/config.js",
     "moduleNameMapper": {
       "\\.(css|less|sass|scss)$": "<rootDir>/__mocks__/styleMock.js",
-      "\\.(gif|ttf|eot|svg)$": "<rootDir>/__mocks__/fileMock.js"
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js"
     },
     "roots": [
       "src"
