DEV-12 added skeleton for the Home Page content

--- a/client/package.json
+++ b/client/package.json
@@ -53,7 +53,8 @@
       "!src/index.js",
       "!src/serviceWorker.js",
       "!src/setupProxy.js",
-      "!src/utils/structjson.js"
+      "!src/utils/structjson.js",
+      "!src/images/*.js"
     ],
     "testPathIgnorePatterns": [
       "<rootDir>/(dist|coverage|node_modules)/",
